test/bad/def_twice.pa
def foo for a b {
    foo(a,b) <-> a = b
}

def foo for a b {
    foo(a,b) <-> ~(a = b)
}

